test/iam/policybinding-subject-uid-resolution/resources/group.yaml
apiVersion: iam.miloapis.com/v1alpha1
kind: Group
metadata:
  name: resolve-me-group
  namespace: ($namespace)
